reporte nomina por empleado fecha

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -300,7 +300,7 @@
 
 
                         <li>
-                            <a href="index.html"><i class="fa fa-bar-chart fa-fw"></i>Reportes</a>
+                            <a href="/Reporte/Index"><i class="fa fa-bar-chart fa-fw"></i>Reportes</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-gear fa-fw"></i>Configuración<span class="fa arrow"></span></a>
