--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -6,6 +6,7 @@
     @Styles.Render("~/Content/estiloIndex")
     <script src="../Content/js/lib/angular.js"></script>
     <script src="../Content/js/lib/angular-route.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
