--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -15,7 +15,7 @@
                 <fieldset>
                     <div class="row">
                         <div class="col-xs-5">
-                            <h2 class="page-header">Datos Personales</h2>
+                            <h2 class="">Datos Personales</h2>
                         </div>
                     </div>
                     
@@ -42,9 +42,13 @@
                             <input required id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
                         </div>
                        <div class="col-xs-3">
-                           <label for="fechanac">Fecha de Nacimiento</label>
-                        <label class="radio-inline"><input  required type="radio" name="sexo" value="M">Masculino</label>
-                        <label class="radio-inline"><input required type="radio" name="sexo" value="F">Femenino</label>
+                           <label for="fechanac" name="sexo">Sexo</label>
+                           <select name="sexo" id="sexo" class="form-control">
+                               <option>Masculino</option>
+                               <option>Femenino</option>
+                           </select>
+                        <!--<input  required type="radio" name="sexo" value="M" id="fechanac">Masculino
+                        <input required type="radio" name="sexo" value="F" id="fechanac">Femenino-->
                         </div>
                     </div>
 
@@ -100,7 +104,7 @@
 
                     <div class="form-group row">
                         <div class="col-xs-5">
-                            <h2 class="page-header">Usuario</h2>
+                            <h2>Usuario</h2>
                             <label for="usuario">Usuario</label>
                             <input required id="usuario" class="form-control" name="usuario" type="text" autofocus>
                         </div>
@@ -128,11 +132,25 @@
                             <label required for="sueldo">Sueldo</label>
                             <input type="text" id="sueldo" name="sueldo" class="form-control">
                         </div>
+                        <div class="col-xs-3">
+                            <label>Banco</label>
+                            <input type="text" id="banco" name="banco" class="form-control" required>
+                        </div>
+                        <div class="col-xs-3">
+                            <label>N. Cuenta</label>
+                            <input  type="text" id="cuenta" name="cuenta" class="form-control" required/>
+                        </div>
 
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-xs-3">
+                            <label for="codempleado">Codigo de Empleado</label>
+                            <input  type="text" id="codempleado" name="codempleado" placeholder="000001" class="form-control"/>
+                        </div>
                     </div>
                    <div class="row">
                        <div class="col-xs-5">
-                           <h2 class="page-header"> Cargas</h2>
+                           <h2> Cargas</h2>
                        </div>
                    </div>
                     <div class="col-lg-12">
