--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
@@ -34,7 +34,6 @@
                             <th>Nombre</th>
                             <th>FechaNac</th>
                             <th>Usuario</th>
-                            <th>Clave</th>
                             <th>Opciones</th>
                         </tr>
                     </thead>
@@ -44,11 +43,10 @@
 
                        
                         <tr class="odd gradeX">
-                            <td>@usuario.Empleado.EmpleadoID</td>
+                            <td>@usuario.Empleado.Codigo</td>
                             <td>@(usuario.Empleado.Persona.nombre +" "+usuario.Empleado.Persona.apellido)</td>
                             <td>@usuario.Empleado.Persona.fecha_nacimiento</td>
                             <td>@usuario.usuario</td>
-                            <td>@usuario.clave</td>
                             <td>
                                 <center>
                                     <a href="/Configuration/EditarUsuario?usuario=@usuario.usuario" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
@@ -57,19 +55,6 @@
                             </td>
                         </tr>
                         }
-                        <tr class="odd gradeX">
-                            <td>0001</td>
-                            <td>José Rodríguez</td>
-                            <td>05/05/2017</td>
-                            <td class="center">E-00521</td>
-                            <td class="center">****** <a class="fa fa-eye fa-fw"></a></td>
-                            <td>
-                                <center>
-                                    <a href="detalle.html" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
-                                    <a href="" title="Aprobar Pago"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true"></span></a>
-                                </center>
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
                 <!-- /.table-responsive
