--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/VerPago.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/VerPago.cshtml
@@ -7,10 +7,12 @@
     <div class="row">
         <div class="col-md-2">
             <h4>Monto: </h4>
+            @if (Model.pago != null) { 
             <h5>@Model.pago.monto</h5>
-        </div>
-        <div class="col-md-offset-8 col-md-2">
-            Ver en PDF <a href="/Pago/VerPagoPdf/?pago=@Model.pago.PagoID"><i class="fa fa-file-pdf-o"></i></a>
+            }
+            else{
+                <h5>Este Pago No Existe</h5>
+            }
         </div>
     </div>
 </div>
