--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -130,7 +130,7 @@
                         </div>
                         <div class="col-xs-3">
                             <label required for="sueldo">Sueldo</label>
-                            <input type="text" id="sueldo" name="sueldo" class="form-control">
+                            <input type="text" id="sueldo" name="sueldo" class="form-control" required>
                         </div>
                         <div class="col-xs-3">
                             <label>Banco</label>
@@ -145,7 +145,7 @@
                     <div class="form-group row">
                         <div class="col-xs-3">
                             <label for="codempleado">Codigo de Empleado</label>
-                            <input  type="text" id="codempleado" name="codempleado" placeholder="000001" class="form-control"/>
+                            <input  type="text" id="codempleado" name="codempleado" placeholder="000001" class="form-control" required/>
                         </div>
                     </div>
                    <div class="row">
