--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
@@ -133,7 +133,7 @@
                 <form role="form" action="/Pago/GenerarNomina" method="post">
                     <div class="row">
                         <div class="col-md-offset-7 col-md-4">
-                            <input required id="fechaefectiva" name="fechaefectiva" type="date" autofocus size="0" class="pull-right form-control">
+                            <input required id="fechaefectiva" name="fechaefectiva" type="date" autofocus  class="pull-right form-control">
                         </div>
                         <div class="col-md-1">
                             <input type="submit" class="btn btn-success pull-right" value="Pagar">
