--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
@@ -50,7 +50,7 @@
                             <td>
                                 <center>
                                     <a href="/Configuration/EditarUsuario?usuario=@usuario.usuario" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
-                                    <a href="" title="Eliminar"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true" ></span></a>
+                                    <a href="/Configuration/DeleteUsuario?usuario=@usuario.usuario" title="Eliminar" onclick="return confirm('Estas seguro de borrar el usuario?')"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true" ></span></a>
                                 </center>
                             </td>
                         </tr>
