--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
@@ -12,142 +12,142 @@
 </div>
 <div class="row">
     <div class="col-lg-12">
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                    <thead>
-                        <tr>                            
-                            <th>Nombre</th>
-                            <th>Sueldo Quincenal</th>                            
-                            <th>Retenciones</th>
-                            <th>Bono de Alimentación</th>
-                            <th>Cargas</th>
-                            <th>Neto a pagar</th>
-                            <th>Detalle</th>
+        <!-- /.panel-heading -->
+        <div class="panel-body">
+            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Sueldo Quincenal</th>
+                        <th>Retenciones</th>
+                        <th>Bono de Alimentación</th>
+                        <th>Cargas</th>
+                        <th>Neto a pagar</th>
+                        <th>Detalle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var user in Model.empleados)
+                    {
+                        <tr class="odd gradeX">
+                            <td>@String.Concat(user.Persona.nombre, " " + user.Persona.apellido)</td>
+                            <td style="color: green">@( (user.sueldo / 2).ToString("C") )</td>
+                            <td style="color: red">- @( (user.Retenciones / 2).ToString("C") )</td>
+                            <td style="color: green">@( (user.BonoAlimentacion).ToString("C") )</td>
+                            <td style="color: red">- @( (user.costoCargas).ToString("C") )</td>
+                            <td>@((user.MontoTotal).ToString("C"))</td>
+                            <td>
+                                <center>
+                                    <a title="Ver" data-toggle="modal" data-target="#myModal" onclick="">
+                                        <i class="fa fa-search fa-fw"></i>
+
+                                    </a>
+                                </center>
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var user in Model.empleados)
-                        {
-                            <tr class="odd gradeX">                                
-                                <td>@String.Concat(user.Persona.nombre, " " + user.Persona.apellido)</td>
-                                <td style="color: green">@( (user.sueldo/2).ToString("C3") )</td>
-                                <td style="color: red">- @( (user.Retenciones/2).ToString("C3") )</td>                                
-                                <td style="color: green">@( (user.BonoAlimentacion).ToString("C3") )</td>
-                                <td style="color: red">- @( (user.costoCargas).ToString("C3") )</td>
-                                <td>@((user.MontoTotal).ToString("C3"))</td>
-                                <td>
-                                    <center>
-                                        <a  title="Ver" data-toggle="modal" data-target="#myModal" onclick="">
-                                            <i class="fa fa-search fa-fw"></i>
+                    }
 
-                                        </a>
-                                    </center>
-                                </td>  
-                            </tr>
-                        }                        
+                </tbody>
+            </table>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h3 class="modal-title" id="myModalLabel">Detalle</h3>
+                        </div>
+                        <div class="modal-body">
+                            <form role="form" action="/Configuration/RegistroUsuario" method="post">
+                                <fieldset>
+                                    <div class="form-group-row">
+                                        <div class="col-md-6">
+                                            <label for="salarioq">Salario Quincenal</label>
+                                            <input id="salarioq" class="form-control" readonly />
+                                        </div>
+                                    </div>
 
-                    </tbody>
-                </table>
-				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-								<h3 class="modal-title" id="myModalLabel">Detalle</h3>
-							</div>
-							<div class="modal-body">
-								<form role="form" action="/Configuration/RegistroUsuario" method="post">
-									<fieldset>
-										<div class="form-group-row">
-											<div class="col-md-6">
-												<label for="salarioq">Salario Quincenal</label>
-												<input id="salarioq" class="form-control" readonly/>
-											</div>
-										</div>
+                                    <div class="form-group-row">
+                                        <div class="col-md-6">
+                                            <label for="retroact">Retroactivo</label>
+                                            <input id="retroact" class="form-control" readonly />
+                                        </div>
+                                    </div>
 
-										<div class="form-group-row">
-											<div class="col-md-6">
-												<label for="retroact">Retroactivo</label>
-												<input id="retroact" class="form-control" readonly/>
-											</div>
-										</div>
-												
-												<h4 class="page-header header-modal">Retenciones</h4>
-										<div class="col-md-6">
-											<label for="sso">S.S.O</label>
-											<input id="sso" class="form-control" readonly/>
-										</div>
-										<div class="col-md-6">
-											<label for="rpe">R.P.E</label>
-											<input id="rpe" class="form-control" readonly/>
-										</div>
-										<div class="col-md-6">
-											<label for="faov">F.A.O.V</label>
-											<input id="faov" class="form-control" readonly/>
-										</div>
-										<div class="col-md-6">
-											<label for="islr">I.S.L.R</label>
-											<input id="islr" class="form-control" readonly/>
-										</div>
-										<h4 class="page-header header-modal">Aportes</h4>
-										<div class="col-md-6">
-											<label for="abv">Alic. Bono Vacacional</label>
-											<input id="abv" class="form-control" readonly/>
-										</div>
+                                    <h4 class="page-header header-modal">Retenciones</h4>
+                                    <div class="col-md-6">
+                                        <label for="sso">S.S.O</label>
+                                        <input id="sso" class="form-control" readonly />
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="rpe">R.P.E</label>
+                                        <input id="rpe" class="form-control" readonly />
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="faov">F.A.O.V</label>
+                                        <input id="faov" class="form-control" readonly />
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="islr">I.S.L.R</label>
+                                        <input id="islr" class="form-control" readonly />
+                                    </div>
+                                    <h4 class="page-header header-modal">Aportes</h4>
+                                    <div class="col-md-6">
+                                        <label for="abv">Alic. Bono Vacacional</label>
+                                        <input id="abv" class="form-control" readonly />
+                                    </div>
 
-										<div class="col-md-6">
-											<label for="autilidades">Alix. Utilidades</label>
-											<input id="autilidades" class="form-control" readonly/>
-										</div>
+                                    <div class="col-md-6">
+                                        <label for="autilidades">Alix. Utilidades</label>
+                                        <input id="autilidades" class="form-control" readonly />
+                                    </div>
 
-										<div class="col-md-6">
-											<label for="apresta">Alic. Prestaciones</label>
-											<input id="apresta" class="form-control" readonly/>
-										</div>
+                                    <div class="col-md-6">
+                                        <label for="apresta">Alic. Prestaciones</label>
+                                        <input id="apresta" class="form-control" readonly />
+                                    </div>
 
-										<div class="col-md-6">
-											<label for="cesta">Cesta Tickets</label>
-											<input id="cesta" class="form-control" readonly/>
-										</div>
+                                    <div class="col-md-6">
+                                        <label for="cesta">Cesta Tickets</label>
+                                        <input id="cesta" class="form-control" readonly />
+                                    </div>
 
-										
-								</fieldset>
-								</form>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-							</div>
-						</div>
-						<!-- /.modal-content -->
-					</div>
-					<!-- /.modal-dialog -->
-				</div>
-				
-				
-				<div>
-                    <div class="col-md-offset-6 col-md-6 pull-right">
-                        <h3 class="pull-right">Total Nomina: <strong>@( Model.totalNomina.ToString("C3")  )</strong></h3>
+
+                                </fieldset>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+
+
+            <div>
+                <div class="col-md-offset-6 col-md-6 pull-right">
+                    <h3 class="pull-right">Total Nomina: <strong>@( Model.totalNomina.ToString("C")  )</strong></h3>
+                </div>
+            </div>
+            <form role="form" action="/Pago/GenerarNomina" method="post">
+                <div class="row">
+                    <div class="col-md-offset-7 col-md-4">
+                        <input required id="fechaefectiva" name="fechaefectiva" type="date" autofocus class="pull-right form-control">
+                    </div>
+                    <div class="col-md-1">
+                        <input type="submit" class="btn btn-success pull-right" value="Pagar">
                     </div>
                 </div>
-                <form role="form" action="/Pago/GenerarNomina" method="post">
-                    <div class="row">
-                        <div class="col-md-offset-7 col-md-4">
-                            <input required id="fechaefectiva" name="fechaefectiva" type="date" autofocus  class="pull-right form-control">
-                        </div>
-                        <div class="col-md-1">
-                            <input type="submit" class="btn btn-success pull-right" value="Pagar">
-                        </div>
-                    </div>
-                </form>
-                    <!-- /.table-responsive
-        <div class="well">
-            <h4>DataTables Usage Information</h4>
-            <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-            <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+            </form>
+            <!-- /.table-responsive
+            <div class="well">
+                <h4>DataTables Usage Information</h4>
+                <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
+                <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+            </div>
+            -->
         </div>
-        -->
-</div>        
         <!-- /.panel-body -->
     </div>
     <!-- /.panel -->
