--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
@@ -39,7 +39,7 @@
                             <td>
                                 <center>
                                     <a title="Ver" data-toggle="modal" data-target="#myModal" onclick="">
-                                        <a href="/Pago/EditarPago?empleado=@user.EmpleadoID" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
+                                        <a href="/Pago/EditarPago" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
                                     </a>
                                 </center>
                             </td>
