--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/DetallePago.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/DetallePago.cshtml
@@ -32,7 +32,7 @@
                     {
                         <tr class="odd gradeX">
                             <td>@String.Concat(user.Empleado.Persona.nombre, " " + user.Empleado.Persona.apellido)</td>
-                            <td style="color: green">@(user.Empleado.sueldo / 2)</td>
+                            <td style="color: green">@(user.sueldo / 2)</td>
                             <td style="color: red">- @(user.Retenciones / 2)</td>
                             <td style="color: green">@(user.BonoAlimentacion)</td>
                             <td style="color: red">- @(user.costoCargas)</td>
