--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Reporte/Index.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Reporte/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ProyectoSIGNDVC.Models.ViewModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Templates/_TemplateIndex.cshtml";
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header header-azul">Reportes</h1>
+        <h1 class="page-header">Reportes</h1>
     </div>
 </div>
 <div class="row">
@@ -80,7 +80,12 @@
                             <li>
                                 <form style="margin: 4px 4px;" role="form" action="/Reporte/Nomina_Trabajador" method="post">
                                     <label for="usuario">Usuario</label>
-                                    <input id="usuario" name="usuario" class="form-control" type="text" placeholder="Usuario" required/>
+                                    <select name="usuario" class="form-control">
+                                        @foreach (var usuario in Model.usuarios)
+                                        {
+                                            <option>@usuario.usuario</option>
+                                        }
+                                    </select>
                                     <label for="desde">Desde</label>
                                     <input id="desde" name="desde" class="form-control" type="date" required/>
                                     <label for="hasta">Hasta</label>
