--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/EditarPago.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/EditarPago.cshtml
@@ -11,29 +11,26 @@
         </div>
 
         <div class="col-lg-12">
-            <form role="form" action="/Pago/EditarPago" method="post">
+            <form role="form" action="/Pago/EditarPagos" method="post">
                 <input required id="length" class="form-control" name="lenght" type="hidden" autofocus value="@Model.empleados.Count()">
+                <fieldset>
                 @foreach (var u in Model.empleados)
                 {
+                    <div class="col-xs-5 row">
+                        <h4 class="page-header">@(u.Persona.nombre + " " + u.Persona.apellido)</h4>
+                    </div>
                     <div>
-                        <input required id="id" class="form-control" name="id" type="hidden" autofocus value="@u.EmpleadoID">                        
-                        <fieldset>
-                            <div class="row">
-                                <div class="col-xs-5">
-                                    <p>@(u.Persona.nombre + " " + u.Persona.apellido)</p>
-                                </div>
-                            </div>
+                        <input required id="id" class="form-control" name="@("id"+@u.EmpleadoID)" type="hidden" autofocus value="@u.EmpleadoID">                               
+                        <div class="row">                            
                             <div class="form-group row">
                                 <div class="col-xs-3">
                                     <label for="Salario">Salario</label>
-                                    <input id="sueldo" class="form-control" name="@String.Concat("sueldo-"+u.EmpleadoID)" type="text" autofocus value="@Model.empleado.sueldo">
+                                    <input id="sueldo" class="form-control" name="@String.Concat("sueldo-"+u.EmpleadoID)" type="text" autofocus value="@u.sueldo">
                                 </div>
-                            </div>
-                            <div class="form-group row">
                                 <div class="col-xs-3">
                                     <label for="Prestamo">Prestamos</label>
                                     <input id="prestamo" class="form-control" name="@String.Concat("prestamo-"+u.EmpleadoID)" type="text" autofocus value="0">
-                                </div>                                
+                                </div>
                                 <div class="col-xs-3">
                                     <label for="retroactiv">Retroactivo</label>
                                     <input id="retroactivo" class="form-control" name="@String.Concat("retroactivo-"+u.EmpleadoID)" type="text" autofocus value="0" />
@@ -63,14 +60,18 @@
                                     <input required id="alimentacion" name="rpe" type="text" autofocus class="form-control" value="@u.BonoAlimentacion" readonly>
                                 </div>
                             </div>
-                            <div class="col-lg-15">
-                                <input type="submit" class="btn btn-success" value="Guardar">
-                                <a href="/Pago/PagoNomina" class="btn btn-danger">Cancelar</a>
-                            </div>
-                        </fieldset>
+                        </div>              
                     </div>
-
                 }
+                <div class="col-lg-15">
+                    <input type="submit" class="btn btn-success" value="Guardar">
+                    <a href="/Pago/PagoNomina" class="btn btn-danger">Cancelar</a>
+                    <input required id="fechaefectiva" name="fechaefectiva" type="date" autofocus class="pull-right form-control">
+                </div>
+            </fieldset>
+                    
+
+                
             </form>
         </div>
 
